# mcp-domain-availability

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  examples.py  pyproject.toml  setup.py  smithery.yaml  test_install.sh  test_mcp.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
src/mcp_domain_availability/: __init__.py  cli.py  main.py
